<resources>
    <string name="app_name">OneSpace</string>
    <string name="ivLogo">ivLogo</string>
    <string name="splash_self_checkin_btn">Self check in your unit</string>
    <string name="splash_des">If you have already check-in, download the App to access.</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="finish">Finish</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="input_phone_num">Please input your phone number</string>
    <string name="resend">Resend</string>
    <string name="verify">Verify</string>
    <string name="enter_code_des">enter the code received in your phone</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="send_code">Send&#10;Code</string>
    <string name="frame_face_your_id">Please frame your face in the square to verify</string>
    <string name="id_card_verify_des">to finish the verification,\n please put your ID card in front of the camera</string>
    <string name="face_id_alert_des">Are you sure you want to cancel the process and stop finding the Unit storage? All data will be lost and you many need to begin next time.</string>
    <string name="face_id_alert_cancel">Yes, I want to cancel</string>
    <string name="face_id_alert_continue">No, I want to continue with the check-in.</string>
    <string name="tap_reservation">tap on your reservation</string>
    <string name="choose_unit">CHOOSE UNIT</string>
    <string name="your_contract">YOUR CONTRACT</string>
    <string name="contract_des_dummy">Singapore, 15 March 2021\n\n
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis fringilla purus vitae mi ultricies viverra. In sagittis nibh a tortor pellentesque sollicitudin sit amet et urna. Vestibulum in lorem metus. Curabitur nec eleifend sem, sed iaculis nisi. Nunc elementum, ligula eu condimentum tristique, purus magna venenatis lacus, non congue enim magna ac arcu. Mauris et tortor ac arcu vestibulum bibendum sodales ac massa. Aliquam mattis turpis id est eleifend, vitae rutrum nibh aliquam. Nulla gravida leo ac nulla pretium, sed gravida sem dictum. Aenean auctor id leo commodo vehicula. Nunc eget nisl auctor, malesuada est tempor, vulputate metus. Nunc volutpat mollis aliquam. Donec semper eget nunc et fringilla.\n\n
    Donec nec nibh congue, dictum eros vitae, scelerisque tortor. Donec arcu orci, ornare at finibus sed, maximus ultricies nulla. Praesent dignissim risus at sem fermentum sagittis. Donec sit amet sodales purus. Aliquam condimentum quam vel mauris finibus, nec sollicitudin ex elementum. Pellentesque enim mi, dignissim sed accumsan at, lacinia non felis. Nam odio odio, feugiat ac lacinia tempor, tristique sed ligula.\n\n
    Nulla facilisi. Morbi a sem porttitor, semper justo quis, dictum diam. Suspendisse potenti. Cras leo elit, feugiat tristique ipsum non, commodo sagittis odio. Donec pharetra tortor cursus diam scelerisque, eget tincidunt nibh eleifend. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Vestibulum eu diam mi. Proin id massa diam. Aliquam blandit dignissim dignissim. Vivamus purus est, tristique eu nisl vitae, varius tempus risus. Mauris vulputate lacus sit amet mi fringilla, non ornare eros tincidunt. Duis mollis ex posuere, semper urna sed, interdum turpis.\n\n\n
    Signature</string>
    <string name="contract_sent_to">Contract will be sent to </string>
    <string name="send">Send</string>
    <string name="electronic_sign">Electronic signature</string>
    <string name="clear">Clear</string>
    <string name="find_your_unit">Find your unit</string>
    <string name="send_addr_to_email">Send address to email</string>
    <string name="download_app">Download the app to open the door</string>
    <string name="final_thanks">Thanks for Self check-in with</string>
    <string name="final_your_resev_info">Your Reservation Information</string>
    <string name="final_supply_txt_dummy">Extra Large Unit - CCTV, Alarm, Power Supply, A/C356</string>
    <string name="floor">Floor:</string>
    <string name="area">Area:</string>
    <string name="reservation_date">Reservation Date</string>
    <string name="move_in_date">Move in Date</string>
    <string name="attrs">Attributes:</string>
    <string name="we_will_send">We will send all the information to your email</string>
    <string name="close">Close</string>
    <string name="map">map</string>
    <string name="download_app_access">download the app to access</string>
</resources>