<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.OTPFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/input_phone_num"
            android:textAllCaps="true"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/spinnerPhoneCode"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/phone_code_spinner"
            android:saveEnabled="false"
            app:layout_constraintBottom_toBottomOf="@+id/etPhoneNum"
            app:layout_constraintEnd_toStartOf="@+id/guideline21"
            app:layout_constraintStart_toStartOf="@+id/guideline19"
            app:layout_constraintTop_toTopOf="@+id/guideline22" />

        <EditText
            android:id="@+id/etPhoneNum"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/phone_num_edittext"
            android:ems="10"
            android:fontFamily="@font/montserrat_bold"
            android:inputType="textPersonName|textEmailAddress|phone"
            android:paddingLeft="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline23"
            app:layout_constraintEnd_toStartOf="@+id/guideline20"
            app:layout_constraintStart_toStartOf="@+id/guideline21"
            app:layout_constraintTop_toTopOf="@+id/guideline22" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.80" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.38" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.04" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.12" />

        <TextView
            android:id="@+id/tvCodeExpire"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/montserrat_bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etVerifyCode" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.87" />

        <Button
            android:id="@+id/btnResend"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/code_resend_btn"
            android:enabled="false"
            android:text="@string/resend"
            android:textAllCaps="false"
            android:textColor="@color/colorCodeResendBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline24" />

        <EditText
            android:id="@+id/etVerifyCode"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/verify_edittext"
            android:ems="10"
            android:enabled="false"
            android:inputType="numberSigned"
            android:paddingLeft="12dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline24"
            app:layout_constraintEnd_toStartOf="@+id/guideline26"
            app:layout_constraintStart_toStartOf="@+id/guideline19"
            app:layout_constraintTop_toTopOf="@+id/guideline25"
            app:layout_constraintVertical_bias="1.0" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.79" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline26"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.58" />

        <Button
            android:id="@+id/btnCodeVerify"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/verify_btn"
            android:enabled="false"
            android:text="@string/verify"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:backgroundTint="@color/colorActive"
            app:layout_constraintBottom_toTopOf="@+id/guideline24"
            app:layout_constraintEnd_toStartOf="@+id/guideline20"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/etVerifyCode"
            app:layout_constraintTop_toTopOf="@+id/guideline25" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/enter_code_des"
            android:textAllCaps="true"
            android:textColor="@color/enter_code_tv_color"
            app:layout_constraintBottom_toTopOf="@+id/etVerifyCode"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintEnd_toStartOf="@+id/guideline20"
            app:layout_constraintStart_toStartOf="@+id/guideline19"
            app:layout_constraintTop_toBottomOf="@+id/etPhoneNum">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnNum1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="@dimen/numpad_margin_horizontal_size"
                    android:layout_marginVertical="@dimen/numpad_margin_vertical_size"
                    android:layout_weight="1"
                    android:background="@drawable/phone_numpad_btn"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/one"
                    android:textColor="@color/phone_numpad_btn_text"
                    android:textSize="@dimen/numpad_text_size" />

                <Button
                    android:id="@+id/btnNum2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="@dimen/numpad_margin_horizontal_size"
                    android:layout_marginVertical="@dimen/numpad_margin_vertical_size"
                    android:layout_weight="1"
                    android:background="@drawable/phone_numpad_btn"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/two"
                    android:textColor="@color/phone_numpad_btn_text"
                    android:textSize="@dimen/numpad_text_size" />

                <Button
                    android:id="@+id/btnNum3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="@dimen/numpad_margin_horizontal_size"
                    android:layout_marginVertical="@dimen/numpad_margin_vertical_size"
                    android:layout_weight="1"
                    android:background="@drawable/phone_numpad_btn"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/three"
                    android:textColor="@color/phone_numpad_btn_text"
                    android:textSize="@dimen/numpad_text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnNum4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="@dimen/numpad_margin_horizontal_size"
                    android:layout_marginVertical="@dimen/numpad_margin_vertical_size"
                    android:layout_weight="1"
                    android:background="@drawable/phone_numpad_btn"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/four"
                    android:textColor="@color/phone_numpad_btn_text"
                    android:textSize="@dimen/numpad_text_size" />

                <Button
                    android:id="@+id/btnNum5"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="@dimen/numpad_margin_horizontal_size"
                    android:layout_marginVertical="@dimen/numpad_margin_vertical_size"
                    android:layout_weight="1"
                    android:background="@drawable/phone_numpad_btn"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/five"
                    android:textColor="@color/phone_numpad_btn_text"
                    android:textSize="@dimen/numpad_text_size" />

                <Button
                    android:id="@+id/btnNum6"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="@dimen/numpad_margin_horizontal_size"
                    android:layout_marginVertical="@dimen/numpad_margin_vertical_size"
                    android:layout_weight="1"
                    android:background="@drawable/phone_numpad_btn"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/six"
                    android:textColor="@color/phone_numpad_btn_text"
                    android:textSize="@dimen/numpad_text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnNum7"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="@dimen/numpad_margin_horizontal_size"
                    android:layout_marginVertical="@dimen/numpad_margin_vertical_size"
                    android:layout_weight="1"
                    android:background="@drawable/phone_numpad_btn"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/seven"
                    android:textColor="@color/phone_numpad_btn_text"
                    android:textSize="@dimen/numpad_text_size" />

                <Button
                    android:id="@+id/btnNum8"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="@dimen/numpad_margin_horizontal_size"
                    android:layout_marginVertical="@dimen/numpad_margin_vertical_size"
                    android:layout_weight="1"
                    android:background="@drawable/phone_numpad_btn"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/eight"
                    android:textColor="@color/phone_numpad_btn_text"
                    android:textSize="@dimen/numpad_text_size" />

                <Button
                    android:id="@+id/btnNum9"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="@dimen/numpad_margin_horizontal_size"
                    android:layout_marginVertical="@dimen/numpad_margin_vertical_size"
                    android:layout_weight="1"
                    android:background="@drawable/phone_numpad_btn"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/nine"
                    android:textColor="@color/phone_numpad_btn_text"
                    android:textSize="@dimen/numpad_text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnNumRemove"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="@dimen/numpad_margin_horizontal_size"
                    android:layout_marginVertical="@dimen/numpad_margin_vertical_size"
                    android:layout_weight="1"
                    android:background="@drawable/phone_numpad_btn"
                    android:drawableLeft="@drawable/phone_numpad_remove_ic"
                    android:paddingLeft="28dp"
                    android:textColor="@color/phone_numpad_btn_text" />

                <Button
                    android:id="@+id/btnNum0"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="@dimen/numpad_margin_horizontal_size"
                    android:layout_marginVertical="@dimen/numpad_margin_vertical_size"
                    android:layout_weight="1"
                    android:background="@drawable/phone_numpad_btn"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/zero"
                    android:textColor="@color/phone_numpad_btn_text"
                    android:textSize="@dimen/numpad_text_size" />

                <Button
                    android:id="@+id/btnSendCode"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="@dimen/numpad_margin_horizontal_size"
                    android:layout_marginVertical="@dimen/numpad_margin_vertical_size"
                    android:layout_weight="1"
                    android:background="@drawable/send_code_btn"
                    android:text="Send&#10;Code"
                    android:textColor="@color/white"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>